# my_little_package

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/my_little_package/: __init__.py  cli.py  talk.py
tests/: test_talk.py
