[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_little_package"
description = "a minimal package example"
version = "0.1.2"
authors = [
    { name = "Maxime RIO", email = "maxime.rio@nesi.org.nz" }
]
dependencies = [
    "pyyaml",
    "defopt",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pdbpp",
    "pyinstrument"
]

[project.scripts]
mlp = "my_little_package.cli:main"

[tool.ruff]
select = ["E", "F"]
ignore = ["E203"]
extend-exclude = [".ipynb_checkpoints"]
