[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "my_little_package"
description = "a minimal package example"
authors = [
    { name = "Maxime RIO", email = "maxime.rio@nesi.org.nz" }
]
dependencies = [
    "pyyaml",
    "defopt",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pdbpp",
    "pyinstrument",
    "pytest",
]

[project.scripts]
mlp = "my_little_package.cli:main"

[tool.setuptools_scm]
# needed even if empty to enable setuptools_scm

[tool.ruff]
select = ["E", "F"]
ignore = ["E203"]
extend-exclude = [".ipynb_checkpoints"]
